[package]
name = "toolkit-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "toolkit_rs"

[dependencies]
uniffi = { version = "0.30.0", features = [ "cli" ] }
image = "0.25.8"
imagequant = "4.4.1"
thiserror = "2.0.17"
lodepng = "3.12.1"
fast_image_resize = { version = "5.3.0", features = ["image"] }
mozjpeg = "0.10.13"
oxipng = { version = "9.1.5", features = ["parallel", "zopfli", "filetime"], default-features = false }
rgb = { version = "0.8.52", default-features = false }
resize = "0.8.8"

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
